  are overwritten in the configuration files on certain systems.
  	(suggested by Sander Bos)
- Changed the way how the Used value in Memory graph is calculated. [#204]
- Changed the alert in 'system.pm' to use the minimum value between the second
  and the third load averages to obtain a more symmetric curve and a sooner
  cancellation of the alert.
  	(suggested by Michael Tosch)
- Fixed a bad memory scaling in *BSD systems.
- Fixed in 'process.pm' to fully honour the option 'netstats_in_bps'.
- Fixed to force Monitorix to be started at the end of boot in systemd-based
  systems. This should fix a problem with 'traffacct.pm' and iptables.
- Fixed the missing declaration of 'allvalues' in 'gensens.pm' which prevented
  graphs generation if 'show_gaps' option was enabled.
- Fixed to correctly represent the values in text mode in 'ipmi.pm'.
- Fixed a missalignment of the MB & CPU temperatures values in 'lmsens.pm'.
- Fixed to limit the length of the device names in 'fs.pm'.
- Fixed a missing gap colouring in some zoomed graphs of 'system.pm'.
- Fixed to save missing values as 'unknown' in 'apcupsd.pm'. [#201]
- Fixed a XSS vulnerability in CGI variables. [#203]
	(thanks to Sebastian Gilon from http://testarmy.com/, who pointed this out)
- Fixed to check if setgid() and setuid() functions were successful before
  starting the HTTP built-in.
  	(thanks to Sander Bos for pointing this out)
- Fixed to disable 'echo' when typing the password in './htpasswd.pl'.
  	(thanks to Sander Bos for pointing this out)
- Fixed to set permissions 0600 to log files.
  	(thanks to Sander Bos for pointing this out)
- Fixed in 'zfs.pm' the way how is collected pool's data.
	(thanks to Derek Dongray, derek AT valedon.co.uk)


3.10.0 - 25-Sep-2017
====================
- Added a complete graph for IPMI sensors using the 'ipmitool' command.
  	(suggested by Frank Dijcks, fd AT fdsystems.nl)
- Added a complete graph for MongoDB. [#38]