@@ -332,8 +332,8 @@ secure_log_date_format = %b %e
 <zfs>
 	max_pools = 5
 	list = pool1, pool2
-	rigid = 0, 0, 0, 0, 2, 0, 2
-	limit = 1000, 1000, 1000, 1000, 100, 1000, 100
+	rigid = 0, 0, 0, 0, 2, 0, 0
+	limit = 1000, 1000, 1000, 1000, 100, 1000, 1000
 </zfs>
 
 
@@ -978,6 +978,8 @@ graph_name = system, kern, proc, hptemp, lmsens, gensens, ipmi, ambsens, nvidia,
 	_zfs3		= L2ARC cache
 	_zfs4		= Pool data usage
 	_zfs5		= Pool usage
+	_zfs6		= Operations
+	_zfs7		= Bandwidth
 	_du		= Directory usage
 	_net1		= Network traffic
 	_net2		= Network packets
